[package]
name = "dyno_code"
version = "0.1.0"
authors = ["James <jabibamman@gmail.com>", "Ronan <ronan.kielt.mail@gmail.com>", "Charles <charlescretois@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"