[package]
name = "dyno_code"
version = "0.3.0"
authors = [
    "James <jabibamman@gmail.com>",
    "Ronan <ronan.kielt.mail@gmail.com>",
    "Charles <charlescretois@gmail.com>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3.0"
k8s-openapi = { version = "0.22.0", features = ["v1_29"] }
uuid = { version = "1.8.0", features = ["v4"] }
kube = "0.91.0"
log = "0.4.14"
env_logger = "0.11.3"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
